# gitlab-activity

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  codecov.yaml  pyproject.toml
config/: .gitlab-activity.toml
docs/scripts/: cli-doc.py  include_md.py
docs/website/: .gitignore  docusaurus.config.js  package-lock.json  package.json
docs/website/docs/: 00-introduction.md  01-configuration.md  02-commandline.md  02-usage.md  03-contributing.md  20-changelog.md
example-configs/: README.md
gitlab_activity/: __init__.py  _version.py  cache.py  cli.py  git.py  graphql.py  lib.py  schema.json  utils.py
tests/: test_cache.py  test_cli.py  test_utils.py
tests/resources/config/: package.json  pyproject.toml
tests/resources/data/: group_data.pkl  issues.csv  mergeRequests.csv  repo_data.pkl
tests/test_cli/: cli_since_last_tag.md  cli_timed_group_activity.md  cli_timed_ns_activity.md  test_cli_local_latest_activity.md
